# TrainingVGG

./: CMakeLists.txt  CMakeSettings.json  Classification.cpp  Classification.h  dataSet.cpp  dataSet.h  logo.rc  main.cpp  mainwindow.ui
model/: modelcom.cpp  modelcom.h  resnet.cpp  resnet.h  vgg.cpp  vgg.h
util/: util.cpp  util.h
